# autotail-bsfgm-scholarly-classification

./: .gitignore  DATA_AVAILABILITY.md  README.md  REPRODUCIBILITY.md  pyproject.toml
configs/: jasist_csl_abstract_ablation_seed13.yaml  jasist_csl_abstract_confirm_seed3407.yaml  jasist_csl_abstract_fgm_ablation_seed13.yaml  jasist_csl_abstract_fgm_ablation_seed42.yaml  jasist_csl_abstract_macbert_seed13.yaml  jasist_csl_abstract_macbert_seed3407.yaml  jasist_csl_abstract_macbert_seed42.yaml  jasist_csl_abstract_screen_seed13.yaml  jasist_csl_abstract_screen_seed42.yaml  jasist_csl_abstract_tfidf_teacher_ablation_seed13.yaml  jasist_csl_cls_ctg_macbert_3seed.yaml  research_task.yaml
data/csl_cls_ctg/: README.md  label_map.json  test.jsonl  train.jsonl  validation.jsonl
data/csl_instruction_discipline_abstract/: README.md  label_map.json  test.jsonl  validation.jsonl
data/discipline_knowledge/: csl_cls_ctg_authority_knowledge.json  csl_cls_ctg_data_driven_terms.json
docs/: code_scope_for_paper.md  repository_publication_plan.md
paper/arxiv_scholarly_autotail_bsaux_fgm_20260528/: README.md  SUBMISSION_CHECKLIST.md  artifact_manifest.md  main.tex  reference_audit_20260530.md  references.bib
src/newalg/: __init__.py  agents.py  calibration.py  cli.py  config.py  dashboard.py  datasets.py  ensemble.py  inference.py  judge.py  literature.py  llm.py  optimizer.py  pipeline.py  pretraining.py  utils.py  (+4 more)
tests/: test_agents.py  test_dashboard.py  test_dataset_and_proposer.py  test_judge_and_report.py  test_literature.py  test_optimizer.py  test_traditional_baseline.py
(+18 files in other folders)
