[project]
name = "newalg"
version = "0.1.0"
description = "Automated Chinese text classification research system"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "accelerate>=1.11.0",
  "datasets>=4.2.0",
  "duckdb>=1.4.1",
  "evaluate>=0.4.6",
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "matplotlib>=3.10.7",
  "numpy>=2.3.4",
  "pandas>=2.3.3",
  "peft>=0.19.1",
  "pydantic>=2.12.3",
  "pyarrow>=21.0.0",
  "pyyaml>=6.0.3",
  "pypdf>=6.2.0",
  "scikit-learn>=1.7.2",
  "scipy>=1.16.3",
  "sentence-transformers>=5.5.1",
  "torch>=2.9.0",
  "transformers>=4.57.1",
  "typer>=0.20.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "ruff>=0.14.2",
]

[project.scripts]
newalg = "newalg.cli:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/newalg"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
